@@ -4,3 +4,22 @@
 {% do lib.list.append(l, 12) %}
 {{ lib.count(l) +}}
 {{ l[0] +}}
+
+{# Test to ensure each iteration sets the same value +#}
+{% for i in [1,2,3] %}
+{% set k = [1,2,3,4] %}
+{% do lib.list.append(k, 5) %}
+{% for j in k %}
+{{ j }}
+{% endfor +%}
+{% endfor %}
+
+{# Empty list and dict +#}
+{{ [] +}}
+{{ [:] +}}
+
+{# Specific dict values +#}
+{% set d = ["Bob": 23, "Susan": 45] %}
+{{ d["Bob"] +}}
+{{ d["Susan"] +}}
+
