@@ -1,3 +1,13 @@
 0
 1
 12
+
+12345
+12345
+12345
+
+[]
+{}
+
+23
+45
